@@ -39,6 +39,9 @@ show_golden_age_turns_remaining = true
 ; that units exerting zone of control do not temporarily become the visible unit on their tiles (unlike, for example, defensive bombard).
 show_zoc_attacks_from_mid_stack = true
 
+; Fixes the defensive bombard animation being skipped when the unit performing defensive bombard is inside an army.
+show_armies_performing_defensive_bombard = true
+
 cut_research_spending_to_avoid_bankruptcy = true
 dont_pause_for_love_the_king_messages = true
 
